<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/detail"
        android:title="@string/song_menu_detail">
    </item>
    <item
        android:id="@+id/remove"
        android:title="@string/song_menu_remove">
    </item>
</menu>