<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingRight="20dp"
    tools:ignore="RtlSymmetry">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="?rForegroundInverted"
        android:background="?search_text_background"
        android:id="@+id/search_field"
        style="@style/SongNameTextAppearance"
        android:layout_gravity="center"/>
</FrameLayout>