<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_search_black_24dp"
        android:id="@+id/search_menu"
        app:showAsAction="always"
        android:title="@string/search">
    </item>
    <item
        android:icon="@drawable/ic_sort_black_24dp"
        android:id="@+id/sort_menu"
        app:showAsAction="collapseActionView"
        android:title="@string/sort">
    </item>
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings_title">
    </item>
    <item
        android:id="@+id/new_playlist_menu"
        android:title="@string/new_playlist">
    </item>
    <item
        android:id="@+id/rename_playlist_menu"
        android:title="@string/rename_playlist">
    </item>
    <item
        android:id="@+id/remove_playlist_menu"
        android:title="@string/remove_playlist">
    </item>
    <item
        android:id="@+id/detect_playlist_bpm"
        android:title="@string/detect_playlist_bpm">
    </item>
</menu>