<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_done_black_48dp"
        android:id="@+id/apply"
        app:showAsAction="always"
        android:title="@string/settings_title">
    </item>
</menu>