...
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?rPrimary"
        app:theme="@style/AppToolBarTheme"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="?rPrimary"
        android:minHeight="10dp"
        app:tabIndicatorColor="?rForegroundInverted"
        app:tabIndicatorHeight="4dp"
...
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.juztoss.rhythmo.views.items.FixedFloatingActionButton
            android:id="@+id/btnAddToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            style="@style/buttonBackgroundBorderless"
            android:tint="?rForegroundInverted"
...
