...

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/play_button"
                android:layout_toStartOf="@+id/play_button"
                style="@style/buttonBackgroundBorderless"
                android:padding="12dp"
                android:src="@drawable/ic_skip_backward_black_24dp"
                android:tint="?rForeground"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/play_button"
                android:layout_toRightOf="@+id/play_button"
                style="@style/buttonBackgroundBorderless"
...
