<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="speeding_up">Speeding up</string>
    <string name="looking_for_new_songs">Looking for new songs</string>
    <string name="settings_title">Settings</string>
    <string name="new_playlist">New playlist</string>
    <string name="remove_playlist">Remove playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="song_detail_title">Song detail</string>
    <string name="pref_build_library">Rescan music on the device</string>
    <string name="build_library_desc">Scan for all new music on the device</string>
    <string name="building_lib_already_started">Already started!</string>
    <string name="drag_handles_welcome">Drag handles to enable BPM filter</string>
    <string name="select_folder">Select folder</string>
    <string name="detect_bpm">Detecting bpm</string>
    <string name="detect_bpm_progress_notification" tools:ignore="PluralsCandidate">Detecting bpm. %1$d of %2$d songs.</string>
    <string name="detect_bpm_progress" tools:ignore="PluralsCandidate">Detecting BPM.\n%1$d of %2$d songs.\nTap to stop.</string>
    <string name="folder_desc">"Files: %d"</string>
    <string name="pref_music_library">Music library</string>
    <string name="pref_bpm_auto_shift_range">BPM auto shift</string>
    <string name="pref_bpm_auto_shift_range_desc">If the filter is enabled songs may be played faster of slower to get to the range</string>
    <string name="locationHeader">Location</string>
    <string name="shift_hint">Shift the rhythm of the song</string>
    <string name="song_menu_detail">Song details</string>
    <string name="song_menu_remove">Remove</string>
    <string name="pref_recognize_bpm_from_name">Get BPM from files names</string>
    <string name="pref_recognize_bpm_from_name_desc">If set firstly BPM for a song is get from the file name of the song</string>
    <string name="default_playlist_name">No name</string>
    <string name="rename_dialog_title">Playlist name:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_playlist_name">All songs</string>
    <string name="search">search</string>
    <string name="sort_alphabetically">Name</string>
    <string name="sort_by_bpm">BPM</string>
    <string name="sort_by_folders">Directories</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_duration">Duration</string>
    <string name="sort_dialog_title">Sort by</string>
    <string name="sort">Sorting</string>
    <string name="build_library_started">BPM scanning started.</string>
    <string name="build_library_finished">BPM scanning finished</string>
    <string name="clear_library_finished">BPM data has been cleared</string>
    <string name="pref_experimental_features">Extra</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="pref_clear_library">Clear all the information about songs BPM</string>
    <string name="clear_library_desc">Tap and hold to turn into a void</string>
    <string name="pref_about">About</string>
    <string name="pref_license_button">Legal information</string>
    <string name="pref_license_desc">Used licenses</string>
    <string name="hold_hint" type="id">Hold it!</string>
    <string name="repeat_mode_all">Repeating all songs</string>
    <string name="repeat_mode_one">Repeating current song</string>
    <string name="repeat_mode_single">Repeating current song and stop</string>
    <string name="repeat_mode_shuffle">Shuffle is on</string>
    <string name="repeat_mode_disabled">Shuffle is off\nRepeat is off</string>
    <string name="tap_hint">Hit \"TAP\"\nin the rhythm of the music\nto find out BPM</string>
    <string name="tap_button_text">TAP</string>
    <string name="shifted_bpm">Shifted bpm</string>
    <string name="bpm" translatable="false">BPM</string>
    <string name="detect_playlist_bpm">Rescan BPM in playlist</string>
    <string name="pref_theme">Color theme</string>
    <string name="pref_theme_desc">Change the player color theme</string>
    <string name="add_songs_hint">Add songs\nto the playlist</string>
    <string name="bpm_filter_enabled">No songs matching\nthe BPM filter</string>
    <string name="cant_play_this_file">Unable to play this file.</string>
    <string-array name="theme_entries">
        <item>Red</item>
        <item>Blue</item>
    </string-array>
    <string-array name="theme_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
